--- a/index.html
+++ b/index.html
@@ -3,19 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TxtfileRead</title>
+    <title>Programming Practice</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <input type="file" id="infile">
-        <div class="mojicode">
-            <input type="radio" name="t" value="u" checked>UTF-8
-            <input type="radio" name="t" value="s">Shift-JIS                
-        </div>
-        <textarea name="" id="outarea" cols="30" rows="10"></textarea>
-        <div id="outtxt"></div>
+        <header>
+            <div class="title">
+                HTML,CSS,Javascript練習場
+            </div>
+        </header>
+        <main>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Javascript</li>
+            </ul>
+        </main>
+        <footer>
+            copyright@Elcon-tech
+        </footer>
     </div>
-    <script src="index.js"></script>
 </body>
 </html>
