--- a/index.html
+++ b/index.html
@@ -1,28 +1,37 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Programming Practice</title>
-    <link rel="stylesheet" href="style.css">
+<meta charset="utf-8">
+<title>TEST</title>
+<link href="style.css" rel="stylesheet">
+<script src="script.js"></script>
 </head>
 <body>
-    <div class="container">
-        <header>
-            <div class="title">
-                HTML,CSS,Javascript練習場
-            </div>
-        </header>
-        <main>
-            <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>Javascript</li>
-            </ul>
-        </main>
-        <footer>
-            copyright@Elcon-tech
-        </footer>
+<div class="con">
+  <header>
+  <h1>エルコンのテストサイト</h1>
+  </header>
+  <nav>
+    <ul>
+      <li>abcdefg</li>
+      <li>abcdefg</li>
+      <li>abcdefg</li>
+      <li>abcdefg</li>
+      <li>abcdefg</li>
+      <li>abcdefg</li>
+      <li>abcdefg</li>
+    </ul>
+  </nav>
+  <div id="topgazo">
+    <div id="topinfo">
+      <h2>えるこんテストサイト</h2>
+      <p>このサイトはエルコンのテストWebサイトです</p>
     </div>
+  </div>
+  <div id="main">
+    <h3>新着情報</h3>
+    <p>Webサイトを開設しました!</p>
+  </div>
+</div>
 </body>
 </html>
