--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <meta charset="utf-8">
 <title>TEST</title>
 <link href="style.css" rel="stylesheet">
-<script src="script.js"></script>
 </head>
 <body>
 <div class="con">
@@ -13,7 +12,7 @@
   </header>
   <nav>
     <ul>
-      <li>abcdefg</li>
+      <li><a href="fetch.html" target="_blank">fetch</a></li>
       <li>abcdefg</li>
       <li>abcdefg</li>
       <li>abcdefg</li>
@@ -33,5 +32,6 @@
     <p>Webサイトを開設しました!</p>
   </div>
 </div>
+<script src="script.js"></script>
 </body>
 </html>
